--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,5 +21,16 @@ spring.datasource.username=root
 spring.datasource.password=password
 spring.jpa.show-sql=true
 
+#Logging
 logging.level.org.hibernate.SQL=ERROR
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+#HIkari connection pool
+spring.datasource.hikari.connectionTimeout=40000 
+spring.datasource.hikari.idleTimeout=600000 
+spring.datasource.hikari.maxLifetime=1200000
+
+#Actuator metrics
+management.endpoint.metrics.enabled = true
+management.endpoints.web.exposure.include = metrics
+
