--- a/compose.yaml
+++ b/compose.yaml
@@ -1,23 +1,29 @@
 services:
   sonarqube:
-    image: sonarqube:community
-    depends_on:
-      - db
+    image: sonarqube:8.2-community
+    expose:
+      - 9000
+    ports:
+      - "127.0.0.1:9000:9000"
+    networks:
+      - sonarnet
     environment:
-      SONAR_JDBC_URL: jdbc:postgresql://db:5432/sonar
-      SONAR_JDBC_USERNAME: sonar
-      SONAR_JDBC_PASSWORD: sonar
+      - sonar.jdbc.url=jdbc:postgresql://db:5432/sonar
+      - sonar.jdbc.username=sonar
+      - sonar.jdbc.password=sonar
     volumes:
+      - sonarqube_conf:/opt/sonarqube/conf
       - sonarqube_data:/opt/sonarqube/data
       - sonarqube_extensions:/opt/sonarqube/extensions
-      - sonarqube_logs:/opt/sonarqube/logs
-    ports:
-      - "9001:9001"
+      - sonarqube_bundled-plugins:/opt/sonarqube/lib/bundled-plugins
+
   db:
-    image: postgres:12
+    image: postgres
+    networks:
+      - sonarnet
     environment:
-      POSTGRES_USER: sonar
-      POSTGRES_PASSWORD: sonar
+      - POSTGRES_USER=sonar
+      - POSTGRES_PASSWORD=sonar
     volumes:
       - postgresql:/var/lib/postgresql
       - postgresql_data:/var/lib/postgresql/data
@@ -78,10 +84,15 @@ services:
     stdin_open: true
     tty: true
 
+
+networks:
+  sonarnet:
+
 volumes:
+  sonarqube_conf:
   sonarqube_data:
   sonarqube_extensions:
-  sonarqube_logs:
+  sonarqube_bundled-plugins:
   postgresql:
   postgresql_data:
   db:
