--- a/compose.yaml
+++ b/compose.yaml
@@ -1,29 +1,28 @@
 services:
   sonarqube:
-    image: sonarqube:8.2-community
-    expose:
-      - 9000
-    ports:
-      - "127.0.0.1:9000:9000"
-    networks:
-      - sonarnet
+    image: sonarqube:community
+    hostname: sonarqube
+    container_name: sonarqube
+    depends_on:
+      - db
     environment:
-      - sonar.jdbc.url=jdbc:postgresql://db:5432/sonar
-      - sonar.jdbc.username=sonar
-      - sonar.jdbc.password=sonar
+      SONAR_JDBC_URL: jdbc:postgresql://db:5432/sonar
+      SONAR_JDBC_USERNAME: sonar
+      SONAR_JDBC_PASSWORD: sonar
     volumes:
-      - sonarqube_conf:/opt/sonarqube/conf
       - sonarqube_data:/opt/sonarqube/data
       - sonarqube_extensions:/opt/sonarqube/extensions
-      - sonarqube_bundled-plugins:/opt/sonarqube/lib/bundled-plugins
-
+      - sonarqube_logs:/opt/sonarqube/logs
+    ports:
+      - "9000:9000"
   db:
-    image: postgres
-    networks:
-      - sonarnet
+    image: postgres:13
+    hostname: postgresql
+    container_name: postgresql
     environment:
-      - POSTGRES_USER=sonar
-      - POSTGRES_PASSWORD=sonar
+      POSTGRES_USER: sonar
+      POSTGRES_PASSWORD: sonar
+      POSTGRES_DB: sonar
     volumes:
       - postgresql:/var/lib/postgresql
       - postgresql_data:/var/lib/postgresql/data
@@ -84,15 +83,10 @@ services:
     stdin_open: true
     tty: true
 
-
-networks:
-  sonarnet:
-
 volumes:
-  sonarqube_conf:
   sonarqube_data:
   sonarqube_extensions:
-  sonarqube_bundled-plugins:
+  sonarqube_logs:
   postgresql:
   postgresql_data:
   db:
