--- a/pom.xml
+++ b/pom.xml
@@ -20,12 +20,16 @@
     <project.test.result.directory>${project.build.directory}/test-results</project.test.result.directory>
     <sonar.host.url>http://localhost:9000</sonar.host.url>
     <sonar.projectKey>assessment</sonar.projectKey>
-    <sonar.login>sonar</sonar.login>
+    <sonar.login>admin</sonar.login>
+    <sonar.password>sonar</sonar.password>
+    <sonar.sources>src/main</sonar.sources>
+    <sonar.tests>src/test</sonar.tests>
     <sonar.scm.provider>git</sonar.scm.provider>
     <sonar.java.codeCoveragePlugin>jacoco</sonar.java.codeCoveragePlugin>
     <sonar.coverage.jacoco.xmlReportPaths>${project.test.result.directory}/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
     <sonar.exclusions>
-      **/*.xml
+      **/*.xml,
+      **/*.properties
     </sonar.exclusions>
     <sonar.coverage.exclusions>
       **/qualitymeasurementsample/*
