Incremental changes for configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,5 +33,5 @@ spring.datasource.hikari.maxLifetime=1200000
 
 #Actuator metrics
 management.endpoint.metrics.enabled = true
-management.endpoints.web.exposure.include = metrics
+management.endpoints.web.exposure.include = prometheus
 
