--- a/compose.yaml
+++ b/compose.yaml
@@ -36,6 +36,8 @@ services:
       - ./data/prometheus/config:/etc/prometheus/
     command:
       - '--config.file=/etc/prometheus/prometheus.yaml'
+    ports:
+      - "9090:9090"
 
   grafana:
     image: grafana/grafana-oss:8.5.2
