--- a/data/prometheus/config/prometheus.yaml
+++ b/data/prometheus/config/prometheus.yaml
@@ -1,8 +1,8 @@
 scrape_configs:
-  - job_name: 'recipe'
+  - job_name: 'Restaurant management application'
     metrics_path: '/actuator/prometheus'
     scrape_interval: 2s
     static_configs:
       - targets: ['localhost:8080']
         labels:
-          application: 'recipe'
+          application: 'Restaurant management application'
