--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,6 +31,8 @@ spring.datasource.hikari.connectionTimeout=40000
 spring.datasource.hikari.idleTimeout=600000 
 spring.datasource.hikari.maxLifetime=1200000
 
-#Actuator metrics
+#Prometheus Grafana Actuator metrics
+management.metrics.export.prometheus.enabled = true
 management.endpoint.metrics.enabled = true
-management.endpoints.web.exposure.include = prometheus
+management.endpoints.web.exposure.include = *
+management.endpoint.prometheus.enabled = true
