--- a/data/prometheus/config/prometheus.yaml
+++ b/data/prometheus/config/prometheus.yaml
@@ -1,8 +1,14 @@
+global:
+  scrape_interval: 15s
+  evaluation_interval: 15s
 scrape_configs:
-  - job_name: 'Restaurant management application'
-    metrics_path: '/actuator/prometheus'
-    scrape_interval: 2s
+  - job_name: "prometheus"
+    scrape_interval: 5s
     static_configs:
-      - targets: ['localhost:8080']
-        labels:
-          application: 'Restaurant management application'
+      - targets: ["prometheus:9090"]
+
+  - job_name: "substrate_node"
+    scrape_interval: 5s
+    metrics_path: 'restaurant/actuator/prometheus'
+    static_configs:
+      - targets: ["application:8080"]
