--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,3 +36,6 @@ management.metrics.export.prometheus.enabled = true
 management.endpoint.metrics.enabled = true
 management.endpoints.web.exposure.include = *
 management.endpoint.prometheus.enabled = true
+
+#JMX for memory footprint
+spring.jmx.enabled = true
