--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,8 @@
   <description>recipe user management</description>
   <properties>
     <java.version>17</java.version>
-    <mapstruct.version>1.5.2.Final</mapstruct.version>
-    <project.test.result.directory>${project.build.directory}/test-results</project.test.result.directory>
+    <project.test.result.directory>${project.build.directory}/test-results
+    </project.test.result.directory>
     <sonar.host.url>http://localhost:9000</sonar.host.url>
     <sonar.projectKey>assessment</sonar.projectKey>
     <sonar.login>admin</sonar.login>
@@ -26,7 +26,8 @@
     <sonar.tests>src/test</sonar.tests>
     <sonar.scm.provider>git</sonar.scm.provider>
     <sonar.java.codeCoveragePlugin>jacoco</sonar.java.codeCoveragePlugin>
-    <sonar.coverage.jacoco.xmlReportPaths>${project.test.result.directory}/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
+    <sonar.coverage.jacoco.xmlReportPaths>${project.test.result.directory}/jacoco/jacoco.xml
+    </sonar.coverage.jacoco.xmlReportPaths>
     <sonar.exclusions>
       **/*.xml,
       **/*.properties
@@ -118,11 +119,6 @@
       <version>2.0.3</version>
     </dependency>
     <dependency>
-      <groupId>org.mapstruct</groupId>
-      <artifactId>mapstruct</artifactId>
-      <version>${mapstruct.version}</version>
-    </dependency>
-    <dependency>
       <groupId>io.cucumber</groupId>
       <artifactId>cucumber-java</artifactId>
       <version>7.12.1</version>
@@ -192,15 +188,15 @@
           </execution>
         </executions>
       </plugin>
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <version>3.0.0-M4</version>
-            <configuration>
-                <argLine>${jacocoArgLine}</argLine>
-                <reportsDirectory>${project.test.result.directory}/surefire</reportsDirectory>
-            </configuration>
-        </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0-M4</version>
+        <configuration>
+          <argLine>${jacocoArgLine}</argLine>
+          <reportsDirectory>${project.test.result.directory}/surefire</reportsDirectory>
+        </configuration>
+      </plugin>
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
@@ -226,11 +222,6 @@
               <groupId>org.projectlombok</groupId>
               <artifactId>lombok</artifactId>
               <version>${lombok.version}</version>
-            </path>
-            <path>
-              <groupId>org.mapstruct</groupId>
-              <artifactId>mapstruct-processor</artifactId>
-              <version>${mapstruct.version}</version>
             </path>
           </annotationProcessorPaths>
         </configuration>
